# ice

./: .gitignore  README.md  package-lock.json  package.json  project.config.json  tsconfig.json
admin/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
ai/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
ai/app/: config.py  main.py
ai/app/providers/: __init__.py  base.py  deepseek.py  doubao.py  glm.py  langchain_provider.py  mock_provider.py  registry.py
ai/app/routers/: audit.py
ai/app/schemas/: __init__.py  audit.py
ai/app/services/: audit.py
docs/: 01-todo-线框图初稿-2026-04-21.md  02-review-线框图评审基线-2026-04-23.md  03-track-线框图修订-2026-04-23.md  04-review-消息私信积分系统设计-2026-05-03.md  05-track-书币系统-2026-05-05.md  06-track-等级系统-2026-05-20.md  07-review-线框跳转链路复审-2026-07-07.md  08-track-数据表设计-2026-07-07.md  09-todo-项目总进度-2026-07-07.md  10-track-需求文档-v1-2026-07-07.md  11-todo-需求文档迁入ice-2026-07-08.md  11-track-API设计-2026-07-08.md  12-track-审核模块-2026-07-08.md  13-track-管理后台MVP-2026-07-08.md  14-track-微信登录流程-2026-07-08.md  15-track-分类种子数据-2026-07-08.md  16-track-首页话题P1实施方案-2026-07-10.md  17-track-C端多方式登录方案-2026-07-10.md  18-track-T12二级页面实施方案-2026-07-12.md  _archived-需求文档-v0-总体设计.md  arch-tech-stack.md  wireframe-个人主页.md  wireframe-书币充值页.md  wireframe-书币明细页.md  wireframe-互动消息列表页.md  wireframe-关注列表页.md  wireframe-写文页.md  wireframe-分类文章列表页.md  wireframe-分类页.md  wireframe-分组文章列表页.md  wireframe-发起话题页.md  wireframe-我的.md  wireframe-搜索结果页.md  wireframe-收藏列表页.md  wireframe-文章详情页.md  wireframe-消息中心.md  wireframe-热榜页.md  wireframe-私信会话页.md  (+8 more)
(+257 files in other folders)
